Completed basic requirements.

--- a/client/index.html
+++ b/client/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <noscript>
+    <link rel="stylesheet" href="styles.css" />
+        <link rel="stylesheet" href="css/skel.css" />
+        <link rel="stylesheet" href="css/style.css" />
+        <link rel="stylesheet" href="css/style-wide.css" />
+        <link rel="stylesheet" href="css/style-noscript.css" />
+    </noscript>
+</head>
   <body>
+
     <!-- Scripts may be placed anywhere on a page. But FYI, they block rendering of elements
      below them until after the scripts load-->
     <script src="bower_components/jquery/jquery.min.js"></script>
@@ -15,6 +25,8 @@
     <script src="models/AppModel.js"></script>
 
     <script src="views/PlayerView.js"></script>
+    <script src="views/SongQueueView.js"></script>
+    <script src="views/SongQueueEntryView.js"></script>
     <script src="views/LibraryView.js"></script>
     <script src="views/LibraryEntryView.js"></script>
     <script src="views/AppView.js"></script>
